Added find by ID, upload file operations + controller advice
